# Course_work_2

./: .env.exemple  README.md  main.py  pyproject.toml
src/: cli.py  file_handler.py  hh.py  json_saver.py  parser.py  utils.py  vacancy.py
tests/: conftest.py  test_cli.py  test_file_handler.py  test_hh.py  test_json_saver.py  test_parser.py  test_utils.py  test_vacancy.py
